--- a/order.html
+++ b/order.html
@@ -8,6 +8,27 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+    
+    // baza danych
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyA4Hl17_gAzEdbSv4T2YuvW3j0qbcKDQC4",
+    authDomain: "kmstudio-47b98.firebaseapp.com",
+    projectId: "kmstudio-47b98",
+    storageBucket: "kmstudio-47b98.firebasestorage.app",
+    messagingSenderId: "269416865716",
+    appId: "1:269416865716:web:bca64d2f1be7c8346a1ce1"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </head>
 <body>
     <!-- Navbar -->
@@ -112,5 +133,41 @@
     <!-- Link do Bootstrap JS i skryptu -->
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script type="module">
+  // Obsługa wysyłania formularza
+  document.querySelector('.rightSection').addEventListener('submit', async (event) => {
+    event.preventDefault(); // Zapobiega przeładowaniu strony
+
+    // Pobieranie danych z formularza
+    const imie = document.getElementById('imie').value;
+    const nazwisko = document.getElementById('nazwisko').value;
+    const email = document.getElementById('email').value;
+    const zgoda1 = document.getElementById('zgoda1').checked;
+    const zgoda2 = document.getElementById('zgoda2').checked;
+    const zgoda3 = document.getElementById('zgoda3').checked;
+    const wiadomosc = document.getElementById('wiadomosc').value;
+
+    try {
+      // Zapisanie danych do kolekcji "zapytania" w Firestore
+      await addDoc(collection(db, 'zapytania'), {
+        imie: imie,
+        nazwisko: nazwisko,
+        email: email,
+        zgoda1: zgoda1,
+        zgoda2: zgoda2,
+        zgoda3: zgoda3,
+        wiadomosc: wiadomosc,
+        timestamp: serverTimestamp() // Automatyczne dodanie znacznika czasu
+      });
+
+      alert('Dziękujemy! Twoje zapytanie zostało wysłane.');
+      document.querySelector('.rightSection').reset(); // Resetowanie formularza
+    } catch (error) {
+      console.error('Błąd przy zapisie danych:', error);
+      alert('Wystąpił błąd. Spróbuj ponownie później.');
+    }
+  });
+</script>
+
 </body>
 </html>
