--- a/order.html
+++ b/order.html
@@ -89,7 +89,10 @@
             </div>
 
             <label id="price-label" class="price-label d-block text-center mb-3">Cena: 0 zł</label>
-
+            <div class="mb-3 text-center">
+                <input type="file" id="zalacznik" class="file-input d-none" accept="image/*">
+                <button type="button" class="btn send" onclick="document.getElementById('zalacznik').click()">Wybierz plik</button>
+            </div>
             
 
             <div class="mb-3">
