--- a/order.html
+++ b/order.html
@@ -8,24 +8,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    
-    <!-- baza danych -->
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-      import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyA4Hl17_gAzEdbSv4T2YuvW3j0qbcKDQC4",
-        authDomain: "kmstudio-47b98.firebaseapp.com",
-        projectId: "kmstudio-47b98",
-        storageBucket: "kmstudio-47b98.firebaseapp.com",
-        messagingSenderId: "269416865716",
-        appId: "1:269416865716:web:bca64d2f1be7c8346a1ce1"
-      };
-
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app); // Tworzy instancję Firestore
-    </script>
 </head>
 <body>
     <!-- Navbar -->
@@ -83,7 +65,7 @@
                     <label for="zgoda2" class="form-check-label">Zdjęcie malowane</label>
                 </div>
                 <div class="col-md-6 form-check">
-                    <input type="checkbox" id="zgoda3" name="zgoda2" class="form-check-input" onclick="calculatePrice()">
+                    <input type="checkbox" id="zgoda3" name="zgoda3" class="form-check-input" onclick="calculatePrice()">
                     <label for="zgoda3" class="form-check-label">Zdjęcie szkic</label>
                 </div>
             </div>
@@ -93,7 +75,6 @@
                 <input type="file" id="zalacznik" class="file-input d-none" accept="image/*">
                 <button type="button" class="btn send" onclick="document.getElementById('zalacznik').click()">Wybierz plik</button>
             </div>
-            
 
             <div class="mb-3">
                 <textarea id="wiadomosc" class="form-control" placeholder="Wiadomość" rows="4" required></textarea>
@@ -124,37 +105,52 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Skrypt Firebase i formularza -->
     <script type="module">
-      document.querySelector('.rightSection').addEventListener('submit', async (event) => {
-        event.preventDefault(); 
-        const imie = document.getElementById('imie').value;
-        const nazwisko = document.getElementById('nazwisko').value;
-        const email = document.getElementById('email').value;
-        const zgoda1 = document.getElementById('zgoda1').checked;
-        const zgoda2 = document.getElementById('zgoda2').checked;
-        const zgoda3 = document.getElementById('zgoda3').checked;
-        const wiadomosc = document.getElementById('wiadomosc').value;
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+      import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-        try {
-          await addDoc(collection(db, 'zapytania'), {
-            imie: imie,
-            nazwisko: nazwisko,
-            email: email,
-            zgoda1: zgoda1,
-            zgoda2: zgoda2,
-            zgoda3: zgoda3,
-            wiadomosc: wiadomosc,
-            timestamp: serverTimestamp()
-          });
-          alert('Dziękujemy! Twoje zapytanie zostało wysłane.');
-          document.querySelector('.rightSection').reset();
-        } catch (error) {
-          console.error('Błąd przy zapisie danych:', error);
-          alert('Wystąpił błąd. Spróbuj ponownie później.');
-        }
+      const firebaseConfig = {
+          apiKey: "AIzaSyA4Hl17_gAzEdbSv4T2YuvW3j0qbcKDQC4",
+          authDomain: "kmstudio-47b98.firebaseapp.com",
+          projectId: "kmstudio-47b98",
+          storageBucket: "kmstudio-47b98.appspot.com",
+          messagingSenderId: "269416865716",
+          appId: "1:269416865716:web:bca64d2f1be7c8346a1ce1"
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+
+      document.querySelector('.rightSection').addEventListener('submit', async (event) => {
+          event.preventDefault();
+          const imie = document.getElementById('imie').value;
+          const nazwisko = document.getElementById('nazwisko').value;
+          const email = document.getElementById('email').value;
+          const zgoda1 = document.getElementById('zgoda1').checked;
+          const zgoda2 = document.getElementById('zgoda2').checked;
+          const zgoda3 = document.getElementById('zgoda3').checked;
+          const wiadomosc = document.getElementById('wiadomosc').value;
+
+          try {
+              await addDoc(collection(db, 'zapytania'), {
+                  imie: imie,
+                  nazwisko: nazwisko,
+                  email: email,
+                  zgoda1: zgoda1,
+                  zgoda2: zgoda2,
+                  zgoda3: zgoda3,
+                  wiadomosc: wiadomosc,
+                  timestamp: serverTimestamp()
+              });
+              alert('Dziękujemy! Twoje zapytanie zostało wysłane.');
+              document.querySelector('.rightSection').reset();
+          } catch (error) {
+              console.error('Błąd przy zapisie danych:', error);
+              alert('Wystąpił błąd. Spróbuj ponownie później.');
+          }
       });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
