--- a/order.html
+++ b/order.html
@@ -151,6 +151,21 @@
           }
       });
     </script>
+    <script>
+      function calculatePrice() {
+          const pricePerPhoto = 20;
+          let totalPhotos = 0;
+
+          // Sprawdź, czy checkboxy są zaznaczone
+          if (document.getElementById('zgoda1').checked) totalPhotos++;
+          if (document.getElementById('zgoda2').checked) totalPhotos++;
+          if (document.getElementById('zgoda3').checked) totalPhotos++;
+
+          // Oblicz cenę i wyświetl ją w labelu
+          const totalPrice = totalPhotos * pricePerPhoto;
+          document.getElementById('price-label').textContent = `Cena: ${totalPrice} zł`;
+      }
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
